--- a/2d/eindopdracht/style.css
+++ b/2d/eindopdracht/style.css
@@ -6,5 +6,6 @@ width: 100%
 position:absolute;
 top:0;
 left:0;
-mix-blend-mode:hard-light;
+/*mix-blend-mode:hard-light;*/
+mix-blend-mode: normal;
 }
