working on extraction, dynamically drawing everything to the page now so i can put them in windows

--- a/2d/eindopdracht/style.css
+++ b/2d/eindopdracht/style.css
@@ -1,5 +1,6 @@
 video{
-width: 100%
+width: 100%;
+margin:10%;
 }
 
 #negativeVideoContainer{
@@ -8,4 +9,10 @@ top:0;
 left:0;
 /*mix-blend-mode:hard-light;*/
 mix-blend-mode: normal;
+}
+
+.center {
+  margin: auto;
+  width: 95%;
+  padding: 10px;
 }
