added more music

--- a/2d/eindopdracht2/style.css
+++ b/2d/eindopdracht2/style.css
@@ -16,6 +16,7 @@ background-size:contain;
   border-image: url('assets/images/playground/redPlayground.webp') 27 repeat;
   position: relative; 
   padding:5%;
+  margin:1%;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   background-color:rgba(100,100,100,0.7);
 }
@@ -43,6 +44,7 @@ background-size:contain;
   float:right;
   display: grid;
   place-items: center; 
+  margin:1%;
   width: 640/2px;
   height: 360/2px;
   border: 16px solid blue; 
@@ -62,6 +64,7 @@ box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   height: 360px;
   border: 16px solid green; 
   border-image: url('assets/images/playground/greenPlayground.webp') 27 repeat;
+  margin:1%;
   position: relative; 
   padding:2%;
   overflow:hidden;
