--- a/2d/eindopdracht2/style.css
+++ b/2d/eindopdracht2/style.css
@@ -5,17 +5,18 @@ body{
 background-color:#FFC300;
 background-image:url('assets/images/playground/colorfulPlayground.jpg');
 background-size:contain;
+
+filter: saturate(100%);
 }
 
 .videoContainer {
   display: grid;
   place-items: center; 
-  width: 640px;
-  height: 360px;
+  width: 840px;
   border:16px solid red;
   border-image: url('assets/images/playground/redPlayground.webp') 27 repeat;
   position: relative; 
-  padding:5%;
+  padding:1%;
   margin:1%;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   background-color:rgba(100,100,100,0.7);
